--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -5,7 +5,9 @@ CPP		=	c++ -Wall -Wextra -Werror -std=c++98
 SRC		=	main.cpp		\
 			Animal.cpp		\
 			Dog.cpp			\
-			Cat.cpp
+			Cat.cpp			\
+			WrongAnimal.cpp \
+			WrongCat.cpp
 
 all		:
 	$(CPP) $(SRC) -o $(NAME)
