--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -6,8 +6,7 @@ SRC		=	main.cpp		\
 			Animal.cpp		\
 			Dog.cpp			\
 			Cat.cpp			\
-			WrongAnimal.cpp \
-			WrongCat.cpp
+			Brain.cpp
 
 all		:
 	$(CPP) $(SRC) -o $(NAME)
